--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <base href="https://nadeemcite.github.io/portfolio/" />
   </head>
   <body>
     <div class="page">
