--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
         </div>
       </div>
     </div>
+    <script src="mousetrap.min.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
