--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nadeem Sajjad | Full Stack Developer</title>
-    <base href="https://nadeemcite.github.io/portfolio/" />
+    <!-- <base href="https://nadeemcite.github.io/portfolio/" /> -->
     <link
       rel="apple-touch-icon"
       sizes="57x57"
@@ -103,7 +103,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="page">
+    <div class="page p">
       <div class="portfolio-title-block">
         <img src="me.png" class="title-image" alt="" />
         <div class="title-name">Nadeem Sajjad</div>
@@ -126,7 +126,14 @@
         </div>
       </div>
     </div>
+    <div class="page t">Tools</div>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
     <script src="mousetrap.min.js"></script>
+
     <script src="app.js"></script>
   </body>
 </html>
